# darknet

./: CMakeLists.txt  LICENSE  Makefile
cfg/: go.cfg
examples/: CMakeLists.txt  art.c  art.cpp  attention.cpp  captcha.cpp  cifar.cpp  classifier.cpp  darknet.cpp  detector.cpp  go.cpp  lsd.cpp  super.cpp  yolo.cpp
include/: darknet.h
src/: CMakeLists.txt  activation_layer.cpp  activation_layer.h  activations.cpp  activations.h  avgpool_layer.c  avgpool_layer.cpp  avgpool_layer.h  avgpool_layer_kernels.cu  batchnorm_layer.cpp  batchnorm_layer.h  blas.c  blas.cpp  blas_kernels.cu  box.cpp  box.h  col2im.cpp  col2im_kernels.cu  compare.cpp  connected_layer.cpp  connected_layer.h  convolutional_layer.c  convolutional_layer.cpp  convolutional_layer.h  cost_layer.c  cost_layer.cpp  cost_layer.h  crnn_layer.cpp  crnn_layer.h  crop_layer.cpp  crop_layer.h  crop_layer_kernels.cu  cuda.cpp  cuda.h  data.cpp  deconvolutional_layer.cpp  deconvolutional_layer.h  detection_layer.cpp  detection_layer.h  dropout_layer.cpp  (+56 more)
